CONFIG: NPM Run Publish

--- a/BlazeWind.csproj
+++ b/BlazeWind.csproj
@@ -17,5 +17,21 @@
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="package-lock.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="package.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Styles\app.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Styles\app.scss">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
