--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,34 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - uses: actions/setup-dotnet@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v3.0.3
         with:
          dotnet-version: '7.0.x'
-         include-prerelease: true
+         include-prerelease: false
     # publishes Blazor project to the release-folder
       #- name: Install .NET Core WASM-TOOLS
       #  run: dotnet workload install wasm-tools
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.6.0
+        
       - name: Publish .NET Core Project
         run: dotnet publish BlazeWind.csproj -c Release -o release --nologo 
         
+      - name: Install dependencies
+        run: npm install
+
+#       - name: Compile SCSS
+#         run: sass Styles:Styles --no-source-map -w 
+      
+#       - name: Build CSS     
+#         run: npx tailwindcss -i .\\Styles\\app.css -o .\\wwwroot\\css\\app.css --minify 
+      - name: NPM publish 
+        run : npm run publish
+         
       - name: Change base-tag in index.html from / to BlazeWind
         run: sed -i 's/<base href="\/" \/>/<base href="\/BlazeWind\/" \/>/g' release/wwwroot/index.html
     
