--- a/BlazeWind.csproj
+++ b/BlazeWind.csproj
@@ -32,6 +32,9 @@
     <None Update="Styles\app.scss">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Styles\BlazeWind.styles.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
