--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,6 @@ jobs:
         uses: actions/setup-dotnet@v3.0.3
         with:
          dotnet-version: '7.0.x'
-         include-prerelease: false
     # publishes Blazor project to the release-folder
       #- name: Install .NET Core WASM-TOOLS
       #  run: dotnet workload install wasm-tools
@@ -45,8 +44,8 @@ jobs:
       - name: List dependencies
         run: npm ls
         
-      - name: Compile SCSS
-        run: sass Styles:Styles --no-source-map
+#       - name: Compile SCSS
+#         run: sass Styles:Styles --no-source-map
       
       - name: Build CSS     
         run: npx tailwindcss -i .\\Styles\\app.css -o .\\wwwroot\\css\\app.css --minify 
