--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,19 +39,14 @@ jobs:
         run: dotnet publish BlazeWind.csproj -c Release -o release --nologo 
         
       - name: Install dependencies
-        run: npm install
+        run: npm i tailwindcss
         
       - name: List dependencies
         run: npm ls
-        
-#       - name: Compile SCSS
-#         run: sass Styles:Styles --no-source-map
-      
-#       - name: Build CSS     
-#         run: npx tailwindcss -i .\\Styles\\app.css -o .\\wwwroot\\css\\app.css --minify 
-#       - name: NPM publish 
-#         run : npm run publish
-         
+              
+      - name: Build CSS     
+        run: npx tailwindcss -i .\\BlazeWind.styles.css -o .\\BlazeWind.styles.css -o --minify 
+
       - name: Change base-tag in index.html from / to BlazeWind
         run: sed -i 's/<base href="\/" \/>/<base href="\/BlazeWind\/" \/>/g' release/wwwroot/index.html
     
