--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm ls
               
       - name: Build CSS     
-        run: npx tailwindcss -i .\\BlazeWind.styles.css -o .\\BlazeWind.styles.css --minify 
+        run: npx tailwindcss -i release/BlazeWind.styles.css -o release/BlazeWind.styles.css --minify 
 
       - name: Change base-tag in index.html from / to BlazeWind
         run: sed -i 's/<base href="\/" \/>/<base href="\/BlazeWind\/" \/>/g' release/wwwroot/index.html
