--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,14 @@ jobs:
     # publishes Blazor project to the release-folder
       #- name: Install .NET Core WASM-TOOLS
       #  run: dotnet workload install wasm-tools
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3.6.0
-        
       - name: Publish .NET Core Project
         run: dotnet publish BlazeWind.csproj -c Release -o release --nologo 
+        
+      - name: List All files
+        run:  ls -a
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.6.0
         
       - name: Install dependencies
         run: npm i 
