--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "dotnet run",
     "build": "dotnet build",
-    "dev": "concurrently \"sass Styles:Styles --no-source-map -w \" \"npx tailwindcss -i .\\Styles\\app.css -o .\\wwwroot\\css\\app.css --minify --watch \" \"npx tailwindcss -i .\\obj\\Debug\\net7.0\\scopedcss\\bundle\\BlazeWind.styles.css  -o .\\obj\\Debug\\net7.0\\scopedcss\\bundle\\BlazeWind.styles.css --minify --watch \" \"cross-env DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1 dotnet watch\"",
+    "dev": "concurrently \"sass Styles:Styles --no-source-map -w \" \"npx tailwindcss -i .\\Styles\\app.css -o .\\wwwroot\\css\\app.css --minify --watch \" \"npx tailwindcss -i .\\obj\\Debug\\net7.0\\scopedcss\\bundle\\BlazeWind.styles.css  -o .\\obj\\Debug\\net7.0\\scopedcss\\bundle\\BlazeWind.styles.css --minify --watch \" \"cross-env DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1 dotnet watch\""
    },
   "dependencies": {
   },
